kubernets/stock-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: stock-service
  namespace: stock-market

spec:
  replicas: 2

  selector:
    matchLabels:
      app: stock-service

  template:
    metadata:
      labels:
        app: stock-service

    spec:
      containers:
        - name: stock-service

          image: manish28/stockservice:latest
                          
          imagePullPolicy: Always

          ports:
            - containerPort: 9001

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "500m"
              memory: "1Gi"

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9001
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9001
            initialDelaySeconds: 60
            periodSeconds: 20
