kubernets/stock-service/stock-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-service
  namespace: stock-market
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-service
  template:
    metadata:
      labels:
        app: stock-service
    spec:
      containers:
        - name: stock-service
          image: manish28/stockservice:latest

          ports:
            - containerPort: 9001

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
