kubernets/stock-service/stock-service-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: stock-service
  namespace: stock-market

spec:
  selector:
    app: stock-service

  ports:
    - name: http
      port: 9001
      targetPort: 9001

  type: ClusterIP
