kubernets/stock-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: stock-service-ingress
  namespace: stock-market

spec:
  ingressClassName: nginx

  rules:
    - host: stock.local

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: stock-service

                port:
                  number: 9001
